k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eshop
  labels:
    app.kubernetes.io/part-of: eshop
    environment: dev
    istio-injection: enabled
